force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/AcceptLGPD__c.field-meta.xml
<CustomField>
    <fullName>AcceptLGPD__c</fullName>
    <label>Consentimento para uso de dados - LGPD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Não</label>
            </value>
            <value>
                <fullName>NoAnswer</fullName>
                <label>Sem Resposta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>