force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/ActiveBlock__c.field-meta.xml
<CustomField>
    <fullName>ActiveBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apoio no controle das camadas de bloqueio</description>
    <label>Bloqueio Ativo</label>
    <type>Checkbox</type>
</CustomField>