force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/AdmBlockReason__c.field-meta.xml
<CustomField>
    <fullName>AdmBlockReason__c</fullName>
    <label>Motivo Bloqueio Administrativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraude</fullName>
            </value>
            <value>
                <fullName>Procedimento Interno</fullName>
            </value>
            <value>
                <fullName>Nenhum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>