force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/DeviceBlock__c.field-meta.xml
<CustomField>
    <fullName>DeviceBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicar o bloqueio de aparelho juntamente com a linha</description>
    <label>Bloqueio Aparelho</label>
    <type>Checkbox</type>
</CustomField>