force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/EID__c.field-meta.xml
<CustomField>
    <fullName>EID__c</fullName>
    <label>EID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>