force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/NextStatus__c.field-meta.xml
<CustomField>
    <fullName>NextStatus__c</fullName>
    <label>Próximo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pré Ativo</fullName>
            </value>
            <value>
                <fullName>Ativo Restrito</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Barrado</fullName>
            </value>
            <value>
                <fullName>Barrado Total</fullName>
            </value>
            <value>
                <fullName>Suspenso a Roubo</fullName>
            </value>
            <value>
                <fullName>Suspenso a Pedido</fullName>
            </value>
            <value>
                <fullName>Suspenso a Cadastro</fullName>
            </value>
            <value>
                <fullName>Suspenso a Fraude</fullName>
            </value>
            <value>
                <fullName>Recém Portado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Desativado</fullName>
            </value>
            <value>
                <fullName>Terminado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>