force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/NumberofDaysAdmSuspension__c.field-meta.xml
<CustomField>
    <fullName>NumberofDaysAdmSuspension__c</fullName>
    <description>Tempo em dias do tempo de bloqueio para seleçao Suspensão Administrativa/ Fraude</description>
    <label>Número de Dias Suspensão Adm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>