force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/NumberofDaysbyRequest__c.field-meta.xml
<CustomField>
    <fullName>NumberofDaysbyRequest__c</fullName>
    <description>Tempo em dias do tempo de bloqueio para seleçao &apos;A Pedido&apos;</description>
    <label>Número de Dias A Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>