force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/NumberofDaysLossTheft__c.field-meta.xml
<CustomField>
    <fullName>NumberofDaysLossTheft__c</fullName>
    <description>Tempo em dias do tempo de bloqueio para seleçao Perda/Roubo</description>
    <label>Número de Dias Perda Roubo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>