force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/PortabilityInProgress__c.field-meta.xml
<CustomField>
    <fullName>PortabilityInProgress__c</fullName>
    <formula>AND(CONTAINS(TEXT(StatusEA__c), "pending") ||
				CONTAINS(TEXT(StatusEA__c), "conflict") ||
				CONTAINS(TEXT(StatusEA__c), "cancel-pending") ||
				CONTAINS(TEXT(StatusEA__c), "suspended"), NOT(ISBLANK(TEXT(StatusEA__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portabilidade em Andamento</label>
    <type>Checkbox</type>
</CustomField>