force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/PortabilityNumber__c.field-meta.xml
<CustomField>
    <fullName>PortabilityNumber__c</fullName>
    <label>Número da Portabilidade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>