force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/PortabilityWindow__c.field-meta.xml
<CustomField>
    <fullName>PortabilityWindow__c</fullName>
    <label>Data da Janela</label>
    <type>DateTime</type>
</CustomField>