force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Tipo de Processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Port-In</fullName>
            </value>
            <value>
                <fullName>Port-Out</fullName>
            </value>
            <value>
                <fullName>Estorno de Port-In</fullName>
            </value>
            <value>
                <fullName>Estorno de Port-Out</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Desconexão</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>