force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/StartDateNextStatus__c.field-meta.xml
<CustomField>
    <fullName>StartDateNextStatus__c</fullName>
    <label>Data Próximo Status</label>
    <type>DateTime</type>
</CustomField>