force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/StatusEA__c.field-meta.xml
<CustomField>
    <fullName>StatusEA__c</fullName>
    <label>Status EA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
                <label>Cancelado</label>
            </value>
            <value>
                <fullName>suspended</fullName>
                <label>Suspenso</label>
            </value>
            <value>
                <fullName>cancel-pending</fullName>
                <label>Cancelamento Pendente</label>
            </value>
            <value>
                <fullName>conflict</fullName>
                <label>Conflito</label>
            </value>
            <value>
                <fullName>pending</fullName>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>old</fullName>
                <label>Antigo</label>
            </value>
            <value>
                <fullName>download-failed-partial</fullName>
                <label>Falha Parcial</label>
            </value>
            <value>
                <fullName>download-failed</fullName>
                <label>Falha</label>
            </value>
            <value>
                <fullName>disconnect-pending</fullName>
                <label>Desconexão Pendente</label>
            </value>
            <value>
                <fullName>window-started</fullName>
                <label>Janela Iniciada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>