force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/SubscriptionNumericId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionNumericId__c</fullName>
    <description>Campo de numeração automática utilizado para gerar o Id numérico da Subscription utilizado pelos sistemas externos. O valor deste campo é utilizado para popular o vlocity_cmt__SubscriptionNumber__c através de um flow sempre que o registro é criado.</description>
    <displayFormat>1999{000000}</displayFormat>
    <label>Id Numérico da Assinatura</label>
    <type>AutoNumber</type>
</CustomField>