force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/SuspendDateAdmSuspension__c.field-meta.xml
<CustomField>
    <fullName>SuspendDateAdmSuspension__c</fullName>
    <description>Data do início do ciclo de bloqueio para seleçao &apos; Suspensao Administrativa /Fraude&apos;</description>
    <label>Data de Início do Bloqueio Suspensao Adm</label>
    <type>DateTime</type>
</CustomField>