force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/SuspendDatebyRequest__c.field-meta.xml
<CustomField>
    <fullName>SuspendDatebyRequest__c</fullName>
    <description>Data do início do ciclo de bloqueio para seleçao &apos;A Pedido&apos;</description>
    <label>Data de Início do Bloqueio A Pedido</label>
    <type>DateTime</type>
</CustomField>