force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/SuspendDateLossTheft__c.field-meta.xml
<CustomField>
    <fullName>SuspendDateLossTheft__c</fullName>
    <description>Data do início do ciclo de bloqueio para seleçao &apos;Perda e Roubo&quot;</description>
    <label>Data de Início do Bloqueio Perda Roubo</label>
    <type>DateTime</type>
</CustomField>