force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/SuspendEndDateAdmSuspension__c.field-meta.xml
<CustomField>
    <fullName>SuspendEndDateAdmSuspension__c</fullName>
    <description>Data do fim do ciclo de bloqueio para seleçao &apos;Suspensao Adm/Fraude&apos;</description>
    <label>Data de Término do Bloqueio Suspensao Ad</label>
    <type>DateTime</type>
</CustomField>