force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/SuspendEndDatebyRequest__c.field-meta.xml
<CustomField>
    <fullName>SuspendEndDatebyRequest__c</fullName>
    <description>Data do fim do ciclo de bloqueio para seleçao &apos;A Pedido&apos;</description>
    <label>Data de Término do Bloqueio A Pedido</label>
    <type>DateTime</type>
</CustomField>