force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/SuspendEndDateLossTheft__c.field-meta.xml
<CustomField>
    <fullName>SuspendEndDateLossTheft__c</fullName>
    <description>Data do fim do ciclo de bloqueio para seleçao &apos;Perda e Roubo&quot;</description>
    <label>Data de Término do Bloqueio Perda Roubo</label>
    <type>DateTime</type>
</CustomField>