force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/TransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>TransactionStatus__c</fullName>
    <label>Status Transação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aguardando-habilitacao-com-autorizacao</fullName>
                <label>Aguardando Habilitação com Autorização</label>
            </value>
            <value>
                <fullName>aguardando-habilitacao-com-autorizacao-negada</fullName>
                <label>Aguardando Habilitação com Autorização Negada</label>
            </value>
            <value>
                <fullName>aguardando-janela</fullName>
                <label>Aguardando janela</label>
            </value>
            <value>
                <fullName>analise-de-fraude</fullName>
                <label>Análise de Fraude</label>
            </value>
            <value>
                <fullName>autorizacao-negada</fullName>
                <label>Autorização Negada</label>
            </value>
            <value>
                <fullName>cancelado</fullName>
                <label>Cancelado</label>
            </value>
            <value>
                <fullName>cancelamento-solicitado</fullName>
                <label>Cancelamento Solicitado</label>
            </value>
            <value>
                <fullName>concluido</fullName>
                <label>Concluido</label>
            </value>
            <value>
                <fullName>devolvido</fullName>
                <label>Devolvido</label>
            </value>
            <value>
                <fullName>em-processo</fullName>
                <label>Em processo</label>
            </value>
            <value>
                <fullName>estornado</fullName>
                <label>Estornado</label>
            </value>
            <value>
                <fullName>pendente-devolucao</fullName>
                <label>Pendente Devolução</label>
            </value>
            <value>
                <fullName>pendente-retorno</fullName>
                <label>Pendente Retorno</label>
            </value>
            <value>
                <fullName>processando-autorizacao</fullName>
                <label>Processando Autorização</label>
            </value>
            <value>
                <fullName>reagendamento-solicitado</fullName>
                <label>Reagendamento Solicitado</label>
            </value>
            <value>
                <fullName>retornado</fullName>
                <label>Retornado</label>
            </value>
            <value>
                <fullName>suspenso</fullName>
                <label>Suspenso</label>
            </value>
            <value>
                <fullName>aguardando-autorizacao</fullName>
                <label>Aguardando Autorização</label>
            </value>
            <value>
                <fullName>aguardando-habilitacao</fullName>
                <label>Aguardando Habilitação</label>
            </value>
            <value>
                <fullName>suspenso-aguardando-habilitacao</fullName>
                <label>Suspenso Aguardando Habilitação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>