force-app/main/default/objects/vlocity_cmt__Subscription__c/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <description>Status of this subscription.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspenso</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Pré Ativo</fullName>
            </value>
            <value>
                <fullName>Selecionado</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Expirado</fullName>
                <isActive>false</isActive>
                <label>Expirado</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Inativo</fullName>
                <isActive>false</isActive>
                <label>Inativo</label>
            </value>
            <value>
                <fullName>Pendente</fullName>
                <isActive>false</isActive>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
                <isActive>false</isActive>
                <label>Suspended</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>